--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -11,3 +11,6 @@
     = f.label :password_confirmation, :class => 'control-label'
     .controls
       = f.text_field :password_confirmation
+  .control-group
+    .controls
+      = f.submit :class => 'btn'
