--- a/app/views/sites/index.html.haml
+++ b/app/views/sites/index.html.haml
@@ -2,10 +2,10 @@
 
 %table
   %thead
-    %th Name
+    %th Endpoint
     %th Status
   %tbody
     %tr
       - @sites.each do |s|
-        %td= s.name
+        %td= s.endpoint
         %td
