--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,9 +28,7 @@
           %a.brand(href="#") Tiql
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= link_to "Add Site", "/sites/new"
 
     .container
 
@@ -43,12 +41,10 @@
             %h3 Sidebar
             %ul.nav.nav-list
               %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= link_to "Tiql a Site"
     
       %footer
-        %p &copy; Company 2013
+        %p &copy; ASC Technology Services 2013
     /
       Javascripts
       \==================================================
