Use path helper

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
           %a.brand(href="#") Tiql
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Add Site", "/sites/new"
+              %li= link_to "Add Site", new_site_path
 
     .container
 
